fix: make navbar fonts never too big, remove global fontsize

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -45,10 +45,10 @@
 .nav-link {
   position: relative !important;
   padding: 0.2rem 0.6rem !important;
-  font-size: 0.84em !important;
+  font-size: 0.75em !important;
   font-weight: 500;
   @media screen and (min-width: 992px) {
-    font-size: 0.9em;
+    font-size: 0.85em !important;
   }
 }
 
